ISSUE-76 - Further cleanup code, we don’t need always immutable instances, it is like premature optimization in this case